syntax = "proto3";

import "Protos/response.proto";
import "Protos/deleteRequest.proto";

option csharp_namespace = "Fleetmanagement.GrpcAPI";

package vehicle;

service Vehicle
{
	rpc GetVehicle (VehicleRequest) returns (VehicleModel);
	rpc GetVehicleByDriverId (VehicleByDriverIdRequest) returns (VehicleModel);
	rpc GetVehicles (VehiclesRequest) returns (stream VehicleModel);
	rpc AddVehicle (VehicleModel) returns (SuccessResponse);
	rpc SaveVehicle (VehicleModel) returns (SuccessResponse);
	rpc DeleteVehicle (DeleteRequest) returns (SuccessResponse);
}

message VehicleRequest
{
	int32 VehicleId = 1;	
}

message VehicleByDriverIdRequest
{
	int32 DriverId = 1;
}

message VehiclesRequest { }

message VehicleModel
{
	int32 Id = 1;
	string ChassisNumber = 2;
	string VehicleType = 3;
	string FuelType = 4;
	string Licenseplate = 5;
	string Make = 6;
	string Model = 7;
}
